@@ -1,7 +1,10 @@
+# Don't modify larch.gemspec directly! This file is auto-generated by a Rake
+# task.
+
 Gem::Specification.new do |s|
   s.name     = 'larch'
   s.summary  = 'Larch syncs messages from one IMAP server to another. Awesomely.'
-  s.version  = "1.0.0.9"
+  s.version  = "1.0.0.10"
   s.author   = "Ryan Grove"
   s.email    = "ryan@wonko.com"
   s.homepage = "http://github.com/rgrove/larch/"
